[package]
name = "vulp"
version = "0.1.0"
edition = "2021"
authors = ["BigBrainsClub <90547216+bigbrainsclub@users.noreply.github.com>"]
description = "Библиотека для быстрой нормализации и валидации url:login:password строк, использует vc, memchr, url, smallvec"
license = "BSD 2-Clause"
repository = "https://github.com/BigBrainsClub/VULP"
categories = ["validation", "line", "url:login:password"]
readme = "README.md"

[dependencies]
vc = { git = "https://github.com/BigBrainsClub/VC" }
memchr = "2.7.4"
url = "2.5.4"
smallvec = "1.14.0"